--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+      <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval' https://cdn.tailwindcss.com https://api.anthropic.com;">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <meta name="theme-color" content="#003366" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <title>Légende de la Mer</title>
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="./manifest.json">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&family=Merriweather:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <script>
@@ -20,32 +21,22 @@
             },
             colors: {
               breton: {
-                blue: '#003366', // Deep Navy
+                blue: '#003366',
                 dark: '#1a1a1a',
-                white: '#f0f7ff', // Slightly blueish white instead of gray
-                accent: '#ffcc00', // Yellow accent
+                white: '#f0f7ff',
+                accent: '#ffcc00',
                 sand: '#e6dccd',
-                pale: '#e0f2fe', // Very light blue for backgrounds
+                pale: '#e0f2fe',
               }
             }
           }
         }
       }
     </script>
-  <script type="importmap">
-{
-  "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.1/",
-    "react": "https://aistudiocdn.com/react@^19.2.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.556.0",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.31.0"
-  }
-}
-</script>
 </head>
   <body class="bg-breton-white text-breton-dark select-none">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <!-- Suppression du / devant index.tsx pour le rendre relatif -->
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
